fix: edtor vertical scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
 @import "tailwindcss";
 
 
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
 
+._markdown-editor-container {
+  max-height: 100vh;
+  overflow-y: auto;
+}
 
 
